# homework

./: .gitignore  README.md  discriminator.pth  generator.pth
AI + Physical Modeling and Data Analysis/1D_Heat_PINN/神经网络一维热传导/: README.md
AI + Physical Modeling and Data Analysis/qlearning/qlearning_projects/: README.md
AI + Physical Modeling and Data Analysis/qlearning/qlearning_projects/01_tic_tac_toe/: agent.py  play.py
ai-phys-modeling/: README.md
ai-phys-modeling/1D_Heat_PINN/: README.md  pyproject.toml
ai-phys-modeling/1D_Heat_PINN/差分一维热传导/: README.md  heat_conduction_1d.py  heat_data_20260326_193117.md
ai-phys-modeling/1D_Heat_PINN/神经网络一维热传导/: README.md  heat_nn_solver.py  pinn_data_20260326_194308.md
ai-phys-modeling/MNIST_GAN/: README.md  environment.yml  train.py
ai-phys-modeling/PINN_Maxwell/: README.md  pinn_maxwell.py
ai-phys-modeling/qlearning/: README.md
ai-phys-modeling/qlearning/qlearning_original_project/: RL_brain.py  maze_env.py  run_this.py
ai-phys-modeling/qlearning/qlearning_projects/: README.md
ai-phys-modeling/qlearning/qlearning_projects/01_tic_tac_toe/: game.py  (+2 more)
llmbuild/: README.md  simple_text_tokenizer.py  tiktokenizer.py
llmbuild/1_input_data_process/: README.md  simple_text_tokenizer.py  tiktokenizer.py
llmbuild/2_attention_machasisms/: README.md  self_attention.py  simple_attention.py
llmbuild/3_GPT_Start/: GPT_main_structure.py  README.md  self_attention_pack.py
llmbuild/4_pretrain/: GPT_main_structure_pack.py  README.md  load.py  loadgpt2.py  novel_cn.txt  pretrain.py  the-verdict.txt  tiktokenizer_pack.py
(+20 files in other folders)
