[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heat-conduction-1d"
version = "1.0.0"
description = "Numerical solution of 1D heat conduction equation using Finite Difference and PINN methods"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
fd = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
]

pinn = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "torch>=2.0.0",
]

dev = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "torch>=2.0.0",
    "scipy>=1.8.0",
]

[tool.setuptools]
py-modules = []
